made some changes for fda project

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "koop-docker-example",
-  "description": "A sample application using koop with postgis and elasticsearch",
+  "name": "koop-docker-fda",
+  "description": "An instance of Koop for the Open FDA project",
   "version": "1.0.0",
   "author": "Kevin Pettijohn",
   "dependencies": {
@@ -9,11 +9,11 @@
     "express": "^4.12.3",
     "js-yaml": "^3.3.1",
     "koop": "^2.1.12",
-    "koop-agol": "^0.2.12",
     "koop-escache": "^0.0.7",
     "koop-gist": "^0.0.2",
     "koop-github": "^0.1.12",
-    "koop-pgcache": "^1.0.1"
+    "koop-pgcache": "^1.0.1",
+    "koop-fda": "*"
   },
   "keywords": [
     "docker",
