inital working build

--- a/package.json
+++ b/package.json
@@ -7,13 +7,9 @@
     "config": "^1.13.0",
     "cors": "^2.5.3",
     "express": "^4.12.3",
-    "js-yaml": "^3.3.1",
-    "koop": "^2.1.12",
-    "koop-escache": "^0.0.7",
-    "koop-gist": "^0.0.2",
-    "koop-github": "^0.1.12",
-    "koop-pgcache": "^1.0.1",
-    "koop-fda": "*"
+    "koop": "3.0.0-alpha.12",
+    "koop-yelp": "git+https://github.com/koopjs/koop-yelp.git#80d0f82",
+    "lodash": "^4.6.1"
   },
   "keywords": [
     "docker",
