--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "config": "^1.13.0",
     "cors": "^2.5.3",
     "express": "^4.12.3",
-    "koop": "3.0.0-alpha.13",
-    "koop-yelp": "git+https://github.com/koopjs/koop-yelp.git#7741395",
+    "koop": "^2.12.1",
+    "koop-pgcache": "^1.7.0",
+    "koop-socrata": "^1.0.4",
     "lodash": "^4.6.1"
   },
   "keywords": [
