--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "cors": "^2.5.3",
     "express": "^4.12.3",
     "koop": "^2.12.1",
+    "koop-census": "0.0.2",
+    "koop-geojson-file": "^2.0.0",
+    "koop-gist": "^2.0.0",
     "koop-pgcache": "^1.7.0",
+    "koop-provider-craigslist": "^2.0.0",
     "koop-socrata": "^1.0.4",
     "lodash": "^4.6.1"
   },
