re-enabling koop-output-geoservices

--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "config": "^1.13.0",
     "cors": "^2.5.3",
     "express": "^4.12.3",
-    "koop": "^3.4.0",
+    "koop": "^2.12.1",
     "koop-census": "0.0.2",
     "koop-geojson-file": "^2.0.0",
     "koop-gist": "^2.0.0",
+    "koop-output-geoservices": "^1.0.0",
     "koop-pgcache": "^1.7.0",
     "koop-provider-craigslist": "^2.0.0",
     "koop-socrata": "^1.0.4",
